Add markdown support, icon